--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^16.3.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.2",
     "next": "13.4.12",
